2005-10-17  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/planner.c: Increase DEFAULT_DUMPRATE to 1024 K/s.

2005-10-17  Ian Turner <ian@zmanda.com>

        * Changelog: Fix line breaks.
        * restore-src/restore.c: Give more useful FSF error messages.
        * recover-src/extract_list.c: Do better error checking on passed port
	  number.
        * common-src/tapelist.c: Do proper memory management of strings.
	  Otherwise really bad stuff happens.

2005-10-17  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/taper.c: Set SIGPIPE to SIG_IGN, the code already
	  handle it correctly.

2005-10-16  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/taper.c (signal_handler): Don't REMOVE_SHARED_MEMORY, it
	  is done by exit.

2005-10-16  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/driverio.c (serial2disk): Print str if error.

2005-10-15  Paddy Sreenivasan <paddy@zmanda.com>

        * server-src/taper.c: Shared memory need not be removed in normal paths.
          Done as part of atexit. 

2005-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by John R. Franks <jrfranks@zmanda.com>

	* changer-src/scsi-aix.c: calls to open/openx guages success by
	  checking for a file descriptor greater than 0.  0 is also a valid
	  descriptor so the check should be >= 0.
	  Calls to SCSI_OpenDevice does not check for error return.
	  Calls to SCSI_OpenDevice does not check for error return.
	  Calls to SCSI_OpenDevice does not check for error return.
	  Call to opendir() does not check for error.
	* changer-src/scsi-hpux_new.c: Ditto.
	* changer-src/scsi-irix.c: Ditto.
	* changer-src/scsi-linux.c: Ditto.
	* changer-src/scsi-solaris.c: Ditto.
	* client-src/selfcheck.c: Call to open() does not check for error.
	* client-src/sendbackup.c: Call to freopen() does not check for error.
	* client-src/sendsize.c: Call to open() does not check for error.
	* common-src/bsd-security.c: Call to open() does not check for error.